# synthetic-sylvaculture

./: Cargo.toml  HANDOFF.md  README.md  run.sh  shell.nix
src/: ecosystem.rs  genome.rs  main.rs  mesh.rs  overlay.rs  plant.rs  prototype.rs  species.rs
